[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/SQUARE.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Menu/letterU.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menu/letterF.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menu/letterO.png" type="Texture" id=4]
[ext_resource path="res://Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Menu/Settings.gd" type="Script" id=6]
[ext_resource path="res://assets/PercentSliders.tscn" type="PackedScene" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends Control

var quit_confirmed = false
onready var quit_button = $Main/Buttons/Panel/VBox/Quit

var section = Vector2() setget set_section

func _ready():
	Global.set_background(\"menu\")
	$Main/ExtraInfo/Version.text = \"Version: \" + Global.VERSION
	$Main/HighScore.text = \"High Score: \" + str(Global.high_score)

func reset_quit_button():
	quit_confirmed = false
	quit_button.text = \"Quit\"

func set_section(sec):
	section = sec
	rect_position = -sec * get_viewport_rect().size

func to_section(sec):
	$Tween.interpolate_property(self, \"section\", section, sec, \\
			0.5, Tween.TRANS_SINE, Tween.EASE_IN_OUT)
	$Tween.start()

func _on_Play_pressed():
	reset_quit_button()
	Global.goto_scene(Global.PLAY)

func _on_Settings_pressed():
	reset_quit_button()
	to_section(Vector2(0, 1))
	$Settings.load_settings()

func _on_Quit_pressed():
	if !quit_confirmed:
		quit_button.text = \"Are you sure?\"
		quit_confirmed = true
	else:
		get_tree().quit()

# easter egg :3
var count = 0
func _on_Creator_pressed():
	count += 1
	if count >= 3:
		Global.easter_egg = true"

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0.231373, 0.184314, 0.184314, 1 )
use_filter = true
extra_spacing_char = 2
extra_spacing_space = 4
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Main/Letters/HBox/letterU:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 0 ), Vector2( -15, 17 ), Vector2( 11, 4 ), Vector2( 7, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main/Letters/HBox/letterU:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 2.1, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -1.45003, -5.15008, 3.57554, -1.45003 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Main/Letters/HBox/letterF:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 2, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 298, 0 ), Vector2( 307, -11 ), Vector2( 281, -22 ), Vector2( 298, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Main/Letters/HBox/letterO:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2.3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 565, 0 ), Vector2( 587, 0 ), Vector2( 522, -4 ), Vector2( 565, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Main/Letters/HBox/letterO:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.44, 3.1 ),
"transitions": PoolRealArray( 1, 1, 0.933034 ),
"update": 0,
"values": [ 0.0, 5.00217, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Main/Letters/HBox/letterF:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9, 2.1, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 4.09894, -3.54883, 0.0 ]
}

[node name="Menu" type="Control"]
theme = ExtResource( 1 )
script = SubResource( 1 )

[node name="Main" type="VBoxContainer" parent="."]
use_parent_material = true
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="HighScore" type="Label" parent="Main"]
margin_right = 1280.0
margin_bottom = 22.0
text = "HighScore: 0"

[node name="Letters" type="CenterContainer" parent="Main"]
editor/display_folded = true
use_parent_material = true
margin_top = 30.0
margin_right = 1280.0
margin_bottom = 244.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBox" type="HBoxContainer" parent="Main/Letters"]
margin_left = 241.0
margin_right = 1038.0
margin_bottom = 214.0
size_flags_horizontal = 0
alignment = 1

[node name="letterU" type="TextureRect" parent="Main/Letters/HBox"]
use_parent_material = true
margin_right = 266.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( 283, 0 )
texture = ExtResource( 2 )

[node name="letterF" type="TextureRect" parent="Main/Letters/HBox"]
use_parent_material = true
margin_left = 274.0
margin_right = 517.0
margin_bottom = 214.0
texture = ExtResource( 3 )

[node name="letterO" type="TextureRect" parent="Main/Letters/HBox"]
use_parent_material = true
margin_left = 525.0
margin_right = 797.0
margin_bottom = 214.0
size_flags_stretch_ratio = 2.0
texture = ExtResource( 4 )

[node name="Buttons" type="MarginContainer" parent="Main"]
editor/display_folded = true
margin_top = 252.0
margin_right = 1280.0
margin_bottom = 670.0
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
custom_constants/margin_right = 220
custom_constants/margin_left = 220

[node name="Panel" type="Panel" parent="Main/Buttons"]
use_parent_material = true
margin_left = 220.0
margin_right = 1060.0
margin_bottom = 418.0

[node name="VBox" type="VBoxContainer" parent="Main/Buttons/Panel"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 74.0
margin_top = 46.0
margin_right = -74.0
margin_bottom = -46.0
alignment = 1

[node name="Play" type="Button" parent="Main/Buttons/Panel/VBox"]
use_parent_material = true
margin_right = 692.0
margin_bottom = 103.0
size_flags_vertical = 3
text = "Let's Play!"

[node name="Settings" type="Button" parent="Main/Buttons/Panel/VBox"]
use_parent_material = true
margin_top = 111.0
margin_right = 692.0
margin_bottom = 214.0
size_flags_vertical = 3
text = "Settings"

[node name="Quit" type="Button" parent="Main/Buttons/Panel/VBox"]
use_parent_material = true
margin_top = 222.0
margin_right = 692.0
margin_bottom = 326.0
size_flags_vertical = 3
action_mode = 0
text = "Quit"

[node name="ExtraInfo" type="HSplitContainer" parent="Main"]
margin_top = 678.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
collapsed = true
dragger_visibility = 1

[node name="Version" type="Label" parent="Main/ExtraInfo"]
margin_right = 913.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = " version: 0.4.0"
valign = 1

[node name="Creator" type="Button" parent="Main/ExtraInfo"]
margin_left = 937.0
margin_right = 1280.0
margin_bottom = 42.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.721569, 0.721569, 1 )
text = "Created by: Roujel Williams"
flat = true
align = 2

[node name="Settings" type="MarginContainer" parent="."]
margin_top = 720.0
margin_right = 1280.0
margin_bottom = 1440.0
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 50
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="Settings"]
margin_left = 200.0
margin_top = 50.0
margin_right = 1080.0
margin_bottom = 670.0

[node name="VBox" type="VBoxContainer" parent="Settings/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 30.0
margin_right = -90.0
margin_bottom = -35.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Settings/Panel/VBox"]
margin_right = 700.0
margin_bottom = 53.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "SETTINGS"
align = 1

[node name="Audio" type="VBoxContainer" parent="Settings/Panel/VBox"]
margin_top = 61.0
margin_right = 700.0
margin_bottom = 497.0
size_flags_vertical = 3

[node name="MusicVol" parent="Settings/Panel/VBox/Audio" instance=ExtResource( 7 )]
text = "Music"
value = 1.0

[node name="SFXVol" parent="Settings/Panel/VBox/Audio" instance=ExtResource( 7 )]
margin_top = 30.0
margin_bottom = 52.0
text = "SFX"
value = 1.0

[node name="HBox" type="HBoxContainer" parent="Settings/Panel/VBox"]
margin_top = 505.0
margin_right = 700.0
margin_bottom = 555.0

[node name="Save" type="Button" parent="Settings/Panel/VBox/HBox"]
margin_right = 346.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Save"

[node name="Back" type="Button" parent="Settings/Panel/VBox/HBox"]
margin_left = 354.0
margin_right = 700.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Floating_Letters"
anims/Floating_Letters = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Main/Buttons/Panel/VBox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/Buttons/Panel/VBox/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main/Buttons/Panel/VBox/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Main/ExtraInfo/Creator" to="." method="_on_Creator_pressed"]
[connection signal="pressed" from="Settings/Panel/VBox/HBox/Save" to="Settings" method="_on_Save_pressed"]
[connection signal="pressed" from="Settings/Panel/VBox/HBox/Back" to="Settings" method="_on_Back_pressed"]
